--- a/main.yml
+++ b/main.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: true
   become_user: root
-  gather_facts: false
+  gather_facts: true
   tasks:
     - include_role:
         name: tomcat
