--- a/main.yml
+++ b/main.yml
@@ -1,7 +1,7 @@
         
 - hosts: all
   become: true
-  become_user: root
+  become_user: devops
   gather_facts: true
   tasks:
     - include_role:
