--- a/main.yml
+++ b/main.yml
@@ -2,8 +2,7 @@
 - hosts: all
   become: true
   become_user: root
-  gather_facts: false
-  tasks:
-    - include_role:
-        name: tomcat
+  gather_facts: true
+  roles:
+    - tomcat
       
